--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,16 @@
     </properties>
   <dependencies>
     <dependency>
+      <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-apis -->
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
+      <version>5.9.2</version>
+      <scope>test</scope>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-params -->
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-params</artifactId>
       <version>5.9.2</version>
       <scope>test</scope>
     </dependency>
